--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,55 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:id="@+id/drawerLayout"
+    tools:openDrawer="start">
 
 
     <!--    Top section    -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-340dp"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="10dp">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/menu_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:background="@drawable/pink_rectangle"
-            android:padding="10dp"
-            android:src="@drawable/menu" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <include
+                layout="@layout/toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/home"
+                android:textColor="#634848"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:paddingStart="85dp"/>
+        </LinearLayout>
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/greeting_et"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/home"
+            android:text="@string/welcome"
             android:textAlignment="center"
             android:textColor="#634848"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
+            android:textStyle="bold|italic"
+            android:textSize="18sp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="10dp"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:layout_gravity="center"
+            />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/greeting_et"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome"
-        android:textAlignment="center"
-        android:textColor="#634848"
-        android:textStyle="bold|italic"
-        android:textSize="18sp"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="10dp"
-        android:background="@drawable/border"
+        android:layout_height="match_parent"
+        app:menu="@menu/side_menu"
+        android:layout_gravity="start"
         />
 
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
