--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,8 @@
                 layout="@layout/toolbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 />
             <TextView
                 android:layout_width="match_parent"
@@ -55,10 +57,14 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
         app:menu="@menu/side_menu"
         android:layout_gravity="start"
+        android:background="@color/pink"
+        app:itemBackground="@color/pink"
+        app:drawerLayoutCornerSize="20dp"
+        android:layout_margin="10dp"
         />
 
 
