--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:title="@string/navigation"
+        android:icon="@drawable/menu"
+        android:id="@+id/navigation"
+        />
+    <item
         android:title="@string/items"
         android:icon="@drawable/ic_items"
         android:id="@+id/items"
