--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -1,18 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
+    tools:openDrawer="start"
+    android:id="@+id/drawerLayout"
     tools:context=".ItemsActivity">
 
-    <TextView
+
+    <!--    Top section    -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/items"
-        android:textAlignment="center"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <include
+                layout="@layout/toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:text="@string/items"
+                android:textColor="#634848"
+                android:paddingTop="8dp"
+                android:textSize="35sp"
+                android:textStyle="bold"
+                android:paddingStart="70dp"/>
+        </LinearLayout>
+
+        <!--        Items layout -->
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="15dp"
+            app:tabIndicatorColor="@color/pink"
+            app:tabTextColor="@color/dark_pink"
+            />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        app:menu="@menu/side_menu_items"
+        android:layout_gravity="start"
+        android:background="@color/pink"
+        app:itemBackground="@color/pink"
+        app:drawerLayoutCornerSize="20dp"
+        android:layout_margin="10dp"
         />
 
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
