--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -35,92 +35,103 @@
             android:paddingStart="30dp"/>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="350dp"
-        android:layout_height="220dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/logo" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/large_pink_rectangle"
-        android:orientation="vertical"
-        android:paddingVertical="20dp">
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="350dp"
+            android:layout_height="220dp"
+            app:layout_constraintBottom_toTopOf="@id/foodInfoLL"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@drawable/logo" />
 
         <LinearLayout
+            android:id="@+id/foodInfoLL"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/foodNameTV"
-                android:layout_width="200dp"
+            android:layout_height="400dp"
+            android:background="@drawable/large_pink_rectangle"
+            android:orientation="vertical"
+            android:paddingTop="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingBottom="25dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#741414"
-                android:textAlignment="center"
-                android:textSize="30sp"
-                android:text="Beef Pizza"
-                android:layout_marginLeft="30dp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:layout_marginHorizontal="30dp"
+                >
+                <TextView
+                    android:id="@+id/foodNameTV"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="#741414"
+                    android:textSize="22sp"
+                    android:text="Beef Pizza"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/foodPriceTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textEnd"
+                    android:text="Rp. 45.000"
+                    android:textColor="#594f4f"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/foodPriceTV"
+                android:id="@+id/foodDescTV"
+                android:layout_marginHorizontal="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:layout_marginTop="50dp"
+                android:textColor="#534040"
+                android:textSize="15sp"
+                android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"
+                />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="qty"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:textColor="#594E4E"/>
+
+            <EditText
+                android:id="@+id/qty_ET"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:textAlignment="center"
-                android:text="Rp. 45.000"
-                android:textColor="#594f4f"
-                android:textSize="30sp"
-                android:layout_marginLeft="15dp"
-                android:textStyle="bold"/>
+                android:inputType="number"
+                />
+
+            <Button
+                android:id="@+id/buy_btn"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:backgroundTint="#755353"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:paddingHorizontal="30dp"
+                android:text="Buy"
+                />
+
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/foodDescTV"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:layout_marginTop="50dp"
-            android:textColor="#534040"
-            android:textSize="15sp"
-            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="qty"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:textStyle="bold"
-            android:textSize="17sp"
-            android:textColor="#594E4E"/>
-
-        <EditText
-            android:id="@+id/qty_ET"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:inputType="number"
-            />
-
-        <Button
-            android:id="@+id/buy_btn"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:backgroundTint="#755353"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:paddingHorizontal="30dp"
-            android:text="Buy"
-            />
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
