--- a/app/src/main/res/layout/list_food_card.xml
+++ b/app/src/main/res/layout/list_food_card.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/ivFoodImg"
-            android:layout_width="50dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:layout_marginEnd="12dp"
@@ -30,7 +30,9 @@
                 android:id="@+id/tv_foodName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Food name"
+                android:textSize="20sp"
                 />
 
             <TextView
