--- a/app/src/main/res/drawable/pink_border.xml
+++ b/app/src/main/res/drawable/pink_border.xml
@@ -7,7 +7,7 @@
         android:right="0dp"
         android:left="0dp"
         android:top="0dp"/>
-    <stroke android:width="10dp" android:color="#D9C1C1"/>
+    <stroke android:width="10dp" android:color="#EBD5C1"/>
     <solid android:color="@android:color/transparent"/>
     <corners android:radius="10dp"/>
 </shape>
