--- a/app/src/main/res/drawable/pink_rectangle.xml
+++ b/app/src/main/res/drawable/pink_rectangle.xml
@@ -2,5 +2,5 @@
     android:shape="rectangle">
     <size android:height="20dp" android:width="20dp"/>
     <corners android:radius="5dp" />
-    <solid android:color="#D9C1C1"/>
+    <solid android:color="#EBD5C1"/>
 </shape>
