--- a/app/src/main/res/layout/list_food_card.xml
+++ b/app/src/main/res/layout/list_food_card.xml
@@ -14,10 +14,11 @@
 
         <ImageView
             android:id="@+id/ivFoodImg"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:adjustViewBounds="true"
             android:layout_marginEnd="12dp"
+            android:scaleType="center"
             />
 
         <LinearLayout
