--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#D9C1C1</color>
+    <color name="pink">#EBD5C1</color>
     <color name="dark_pink">#634848</color>
 </resources>
