--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -66,8 +66,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="100dp"
-                android:layout_height="400dp"
+                android:layout_marginTop="40dp"
+                android:layout_height="250dp"
                 android:layout_marginHorizontal="12dp"
                 >
 
@@ -75,7 +75,7 @@
                     android:layout_centerInParent="true"
                     android:id="@+id/carouselVP"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="300dp"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
